@@ -1,6 +1,7 @@
 
 pl 39
 	- fixes to Array
+	- fixes to Interval
 
 
 pl 38
